--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ body {
   width: 80%; /* ボタンの横幅 */
   position: relative;
   width: 220px;
-  background: #ffffff;
+  background: #0082CA;
   padding: 10px;
   border-radius: 8px;
   cursor: pointer;
