--- a/style.css
+++ b/style.css
@@ -399,6 +399,10 @@ body {
   border-bottom: 2px solid #0082CA;
   transform: rotate(-45deg);
   transition: transform 0.3s ease;
+  position: absolute; /* 位置指定 */
+  right: 15px; /* 右端から15px */
+  top: 50%; /* 上下中央揃え */
+  transform-origin: center;
 }
 
 .selectMultiple.open .arrow {
