--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ body {
   border-radius: 8px;
   cursor: pointer;
   font-size: 1.2rem; /* ボタン内の文字サイズ */
-  text-align: center; /* 文字を中央揃え */
+  text-align: left; /* 文字を中央揃え */
   display: flex;
   align-items: center;
   border: none;
@@ -434,7 +434,7 @@ body {
   width: 80%; /* ボタンの横幅 */
   max-width: 400px; /* ボタンの最大幅 */
   margin-bottom: 10px; /* ボタン同士の間隔 */
-  text-align: center; /* 文字を中央揃え */
+  text-align: left; /* 文字を中央揃え */
   position: relative;
   background: #FFFFFF;
   padding: 15px; /* ボタンの上下左右の余白 */
