--- a/style.css
+++ b/style.css
@@ -444,7 +444,8 @@ body {
   cursor: pointer;
   border: 2px solid #0082CA;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-left: 30px;
 }
 
 .filter-button-icon {
