--- a/style.css
+++ b/style.css
@@ -385,9 +385,8 @@ body {
 .selectMultiple div {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* 変更 */
-  gap: 15px;
-  width: 100%;
+  justify-content: flex-start;
+  width: 100%; /* gapを削除 */
 }
 
 .selected-option {
@@ -447,7 +446,7 @@ body {
   padding: 15px; /* ボタンの上下左右の余白 */
   border-radius: 8px;
   cursor: pointer;
-  border: 2px solid #000000;
+  border: 2px solid #0082CA;
   display: flex;
   align-items: center;  /* アイコンとテキストの位置を揃える */
   justify-content: flex-start; /* 左詰め */
