--- a/style.css
+++ b/style.css
@@ -383,9 +383,9 @@ body {
 
 
 .selectMultiple div {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: flex !important;
+  align-items: center  !important;
+  justify-content: space-between  !important;
 }
 
 .selected-option {
@@ -445,7 +445,7 @@ body {
   padding: 15px; /* ボタンの上下左右の余白 */
   border-radius: 8px;
   cursor: pointer;
-  border: 2px solid #0082CA;
+  border: 2px solid #000000;
   display: flex;
   align-items: center;  /* アイコンとテキストの位置を揃える */
   justify-content: flex-start; /* 左詰め */
