--- a/style.css
+++ b/style.css
@@ -445,18 +445,18 @@ body {
   padding: 15px; /* ボタンの上下左右の余白 */
   border-radius: 8px;
   cursor: pointer;
-  border: 2px solid #000000;
+  border: 2px solid #0082CA;
   display: flex;
   align-items: center;  /* アイコンとテキストの位置を揃える */
   justify-content: flex-start; /* 左詰め */
 }
 
 .filter-button-icon {
-  width: 24px; /* アイコンの幅 */
-  height: 24px; /* アイコンの高さ */
-  margin-left: 15px; /* ボタンの左端から15pxの位置 */
-  margin-right: 15px; /* アイコンとテキストの間隔 */
-  flex-shrink: 0; /* アイコンが小さくならないように */
+  width: 24px  !important; /* アイコンの幅 */
+  height: 24px  !important; /* アイコンの高さ */
+  margin-left: 15px  !important; /* ボタンの左端から15pxの位置 */
+  margin-right: 15px  !important; /* アイコンとテキストの間隔 */
+  flex-shrink: 0  !important; /* アイコンが小さくならないように */
 }
 
 .filter-button:hover {
