--- a/style.css
+++ b/style.css
@@ -465,8 +465,8 @@ body {
 }
 
 .plan {
-  margin: 20px 0;
-  padding: 10px;
+  margin: 20px 10px;
+  padding: 0;
   background-color: #ffffff;
 }
 
