--- a/schedule.css
+++ b/schedule.css
@@ -143,8 +143,8 @@ img {
 }
 
 .credit {
-  font-size: 0.9em;
-  color: #666;
+  font-size: 0.7em;
+  color: #A9D0F5;
   text-align: center;
   margin-bottom: 20px;
 }
