--- a/intro.css
+++ b/intro.css
@@ -2,7 +2,7 @@
       font-family: Arial, sans-serif;
       background-color: #0082CA;
       color: white;
-      text-align: center;
+      text-align: center; /* これいらない */
       overflow: hidden;
     }
 
