--- a/intro.css
+++ b/intro.css
@@ -86,6 +86,10 @@
         text-alige: center;
     }
 
+    p {
+        font-size: 14px;
+    }
+
     .feature {
         background-color: #f5f5f5;
         padding: 20px;
