--- a/intro.css
+++ b/intro.css
@@ -1,7 +1,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #0082CA;
-      color: white;
+      color: black;
       overflow: hidden;
       text-align: center;
     }
