--- a/intro.css
+++ b/intro.css
@@ -135,6 +135,7 @@
         position: absolute;
         display: block;
         background-color: black;
+        opacity: 0; /* 最初は見えない */
     }
 
     /* 上の線 */
@@ -144,7 +145,7 @@
         width: 100%;
         height: 3px;
         transform: translateX(-101%);
-        transition: transform 0.4s 0.5s ease;
+        transition: transform 0.4s 0.5s ease, opacity 0.2s;
     }
 
     ._left_top_to_bottom {
@@ -153,7 +154,7 @@
         width: 3px;
         height: 100%;
         transform: translateY(-101%);
-        transition: transform 0.4s 0.7s ease;
+        transition: transform 0.4s 0.7s ease, opacity 0.2s;
     }
 
     ._right_bottom_to_left {
@@ -162,7 +163,7 @@
         width: 100%;
         height: 3px;
         transform: translateX(101%);
-        transition: transform 0.4s 0.9s ease;
+        transition: transform 0.4s 0.9s ease, opacity 0.2s;
     }
 
     ._right_bottom_to_top {
@@ -171,7 +172,7 @@
         width: 3px;
         height: 100%;
         transform: translateY(101%);
-        transition: transform 0.4s 1.1s ease;
+        transition: transform 0.4s 1.1s ease, opacity 0.2s;
     }
 
     /* スクロールで発火 */
@@ -181,16 +182,28 @@
 
     .fade-in-section.show .all_border_title ._left_top_to_right {
         transform: translateX(0);
+        opacity: 1;
     }
 
     .fade-in-section.show .all_border_title ._left_top_to_bottom {
         transform: translateY(0);
+        opacity: 1;
     }
 
     .fade-in-section.show .all_border_title ._right_bottom_to_left {
         transform: translateX(0);
+        opacity: 1;
     }
 
     .fade-in-section.show .all_border_title ._right_bottom_to_top {
         transform: translateY(0);
+        opacity: 1;
+    }
+
+    .fade-in-section.show .all_border_title._anime ._left_top_to_right,
+    .fade-in-section.show .all_border_title._anime ._left_top_to_bottom,
+    .fade-in-section.show .all_border_title._anime ._right_bottom_to_left,
+    .fade-in-section.show .all_border_title._anime ._right_bottom_to_top {
+        opacity: 0;
+        transition-delay: 0.4s; /* 動きが終わると線が消える */
     }
