--- a/intro.css
+++ b/intro.css
@@ -145,7 +145,8 @@
         width: 100%;
         height: 3px;
         transform: translateX(-101%);
-        transition: transform 0.4s 0.5s ease, opacity 0.2s;
+        transition: transform 0.4s ease, opacity 0.3s;
+        transition-delay: 0s;
     }
 
     ._left_top_to_bottom {
@@ -154,7 +155,8 @@
         width: 3px;
         height: 100%;
         transform: translateY(-101%);
-        transition: transform 0.4s 0.7s ease, opacity 0.2s;
+        transition: transform 0.4s ease, opacity 0.3s;
+        transition-delay: 0.3s;
     }
 
     ._right_bottom_to_left {
@@ -163,7 +165,8 @@
         width: 100%;
         height: 3px;
         transform: translateX(101%);
-        transition: transform 0.4s 0.9s ease, opacity 0.2s;
+        transition: transform 0.4s ease, opacity 0.3s;
+        transition-delay: 0.6s;
     }
 
     ._right_bottom_to_top {
@@ -172,7 +175,8 @@
         width: 3px;
         height: 100%;
         transform: translateY(101%);
-        transition: transform 0.4s 1.1s ease, opacity 0.2s;
+        transition: transform 0.4s ease, opacity 0.3s;
+        transition-delay: 0.9s;
     }
 
     /* スクロールで発火 */
@@ -205,5 +209,5 @@
     .fade-in-section.show .all_border_title._anime ._right_bottom_to_left,
     .fade-in-section.show .all_border_title._anime ._right_bottom_to_top {
         opacity: 0;
-        transition-delay: 0.4s; /* 動きが終わると線が消える */
+        transition-delay: 1.2s; /* 動きが終わると線が消える */
     }
