--- a/intro.css
+++ b/intro.css
@@ -236,17 +236,19 @@
         position: relative;
         display: inline-block;
         color: transparent;
+        transform: none;
+        opacity: 1;
     }
 
     .title::before {
         content: "";
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    right: 100%; /* 初期位置（画面外） */
-    bottom: 0;
-    left: 0;
-    background: #000; /* マスクの色 */
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        right: 100%; /* 初期位置（画面外） */
+        bottom: 0;
+        left: 0;
+        background: #000; /* マスクの色 */
     }
 
     .fade-in-section.show .title {
