--- a/intro.css
+++ b/intro.css
@@ -248,7 +248,7 @@
         right: 100%; /* 初期位置（画面外） */
         bottom: 0;
         left: 0;
-        background: #000; /* マスクの色 */
+        background: #0082CA; /* マスクの色 */
     }
 
     ._text-appear {
