--- a/intro.css
+++ b/intro.css
@@ -245,30 +245,15 @@
     }
 
     .title::before {
-        content: "";
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        right: 100%; /* 初期位置（画面外） */
-        bottom: 0;
-        left: 0;
-        background: #0082CA; /* マスクの色 */
+        content: none;
     }
 
     ._text-appear {
-        animation: textFadeIn 0s 0.5s forwards;
-    }
-
-    ._text-appear::before {
-        animation: textMaskSlide 1s forwards;
+        animation: textFadeIn 0.5s forwards;
     }
 
     .fade-in-section.show .title {
         animation: textFadeIn 0s 0.5s forwards;
-    }
-
-    .fade-in-section.show .title::before {
-        animation: textMaskSlide 1s forwards;
     }
 
     @keyframes textFadeIn {
@@ -277,13 +262,3 @@
         }
     }
 
-    @keyframes textMaskSlide {
-        50% {
-            left: 0%;
-            right: 0%;
-        }
-        100% {
-            left: 100%;
-            right: 0%;
-        }
-    }
