--- a/intro.css
+++ b/intro.css
@@ -2,6 +2,7 @@
       font-family: Arial, sans-serif;
       background-color: #0082CA;
       color: black;
+      text-align: center;
     }
 
     .main-content {
