--- a/intro.css
+++ b/intro.css
@@ -152,7 +152,7 @@
         padding: 20px 40px;
         font-size: 24px;
         font-weight: bold;
-        background: white;
+        color: white;
         overflow: hidden;
     }
 
