--- a/intro.css
+++ b/intro.css
@@ -38,11 +38,11 @@
     }
 
     #site-intro {
-        margin: 20px auto;
+        margin: 0px auto;
         padding: 20px;
         position: relative;
         width: 100vw;
-        height: 90vh
+        height: 90vh;
         text-align: center;
         align-items: center;
         justify-content: center; /* 文字を中央に配置 */
