--- a/intro.css
+++ b/intro.css
@@ -41,8 +41,8 @@
         margin: 0px auto;
         padding: 20px;
         position: relative;
-        width: 100vw;
-        height: 80vh;
+        width: 100;
+        height: 75vh;
         text-align: center;
         align-items: center;
         flex-direction: column;
