--- a/intro.css
+++ b/intro.css
@@ -158,7 +158,7 @@
     .all_square_anime span {
         position: absolute;
         display: block;
-        background-color: black;
+        background-color: white;
     }
 
     /* 上の線 */
