--- a/intro.css
+++ b/intro.css
@@ -290,7 +290,7 @@
 
     #scroll-down {
         position: absolute;
-        bottom: 30px; /* 画面下部に配置、あとで変える */
+        bottom: 75px; /* 画面下部に配置 */
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
