--- a/intro.css
+++ b/intro.css
@@ -337,3 +337,48 @@
             transform: translateY(10px);
         }
     }
+
+    /* 「防災はなぜ必要？」のアニメーション */
+    .title-span {
+        color: transparent; /* 初期状態では文字を隠す */
+        display: block;
+        overflow: hidden;
+        position: relative;
+        transition: color 0ms 0.5s;
+        width: max-content;
+    }
+
+    /* アニメーションの背景ライン */
+    .title-span::after {
+        content: "";
+        left: 0;
+        display: block;
+        position: absolute;
+        top: 0;
+        transform: translateX(-100%);
+        width: 100%;
+        height: 100%;
+        background-color: #0082CA; /* ラインの色 */
+    }
+
+    /* スクロールでアクティブ */
+    .title-span.active {
+        color: black;
+    }
+
+    .title-span.active::after {
+        animation: lineAnime 1s;
+    }
+
+    /* ラインの動き */
+    @keyframes lineAnime {
+        0% {
+            transform: translateX(-100%);
+        }
+        50% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(100%);
+        }
+    }
