--- a/intro.css
+++ b/intro.css
@@ -118,7 +118,7 @@
         transition: opacity 1s ease-out, transform 1s ease-out;
     }
 
-    .fade-in-section.show .intro-image {
+    .intro-image.show {
         opacity: 1;
         transform: translateY(0);
     }
