--- a/intro.css
+++ b/intro.css
@@ -81,6 +81,10 @@
         line-height: 1.9;
     }
 
+    h3 {
+        font-size: 22px;
+    }
+
     .feature {
         background-color: #f5f5f5;
         padding: 20px;
