--- a/intro.css
+++ b/intro.css
@@ -410,8 +410,9 @@
         background: linear-gradient(#0082CA, #0082CA) 0 100% / 0 2px no-repeat;
         transition: background 1.5s ease-in-out;
         text-decoration: none;
+        padding-bottom: 8px;
     }
 
     .underline-after {
-        background-size: 100% 2px;
+        background-size: 100% 3px;
     }
