--- a/intro.css
+++ b/intro.css
@@ -431,3 +431,11 @@
         border-radius: 30px;
         width: 65%;
     }
+
+    #feature h3 {
+        font-size: 25px;
+    }
+
+    #feature p {
+        font-size: 14px;
+    }
