--- a/intro.css
+++ b/intro.css
@@ -435,3 +435,35 @@
     #feature h3 {
         font-size: 25px;
     }
+
+    /* フッター */
+    footer {
+        background-color: #f8f8f8;
+        text-align: center;
+        padding: 20px;
+        font-family: Arial, sans-serif;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+    }
+
+    .footer-container {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    .footer-logo {
+        width: 100px;
+        height: auto;
+    }
+
+    .footer-name {
+        fotn-size: 18px;
+        font-weight: bold;
+        margin: 5px 0;
+    }
+
+    .footer-contact {
+        font-size: 14px;
+        color: #666;
+    }
