--- a/intro.css
+++ b/intro.css
@@ -9,7 +9,7 @@
       display: block;
       background-color: white;
       color: black;
-      height: 100vh;
+      min-height: 100vh;
     }
 
     #header-container {
